@@ -26,6 +26,7 @@ Updated by: FPtje Falco
 [CHANGE] SpreadFire code: THANKS PHILXYZ
 [CHANGE] The way movement is done
 [CHANGE] The druglab completely! I hope you like it!
+[CHANGE] Put the warrant back.
 [FIX] When use protection is on, doors couldn't be opened by some people, now they can.
 [FIX] Rare error with dropweapon
 [FIX] Exploit with shipments: Exploding them with more than one explosive would make them spawn more guns than usual.
